argo/deployments/blue&green/bluegreen-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: nginx-bluegreen
  namespace: argo-rollouts
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.19.3
        ports:
        - containerPort: 80
  strategy:
    blueGreen:
      activeService: nginx-active-svc
      previewService: nginx-preview-svc
      autoPromotionEnabled: true
