argo/deployments/blue&green/bluegreen-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-active-svc
  namespace: argo-rollouts
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-preview-svc
  namespace: argo-rollouts
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
